Reenable stronger server ciphers.
I had disabled this to troubleshoot SSL errors, but that turned out to
be due to needing to increase the number of intermediate links in the
trust chain.

--- a/default.conf
+++ b/default.conf
@@ -9,14 +9,16 @@ server {
     ssl_certificate     /etc/nginx/certificate.pem;
     ssl_certificate_key /etc/nginx/key.pem;
     ssl_protocols       TLSv1.1 TLSv1.2;
-    #ssl_ciphers         HIGH:!aNULL:!MD5;
-    #ssl_prefer_server_ciphers on;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
 
     ssl_verify_client on;
     ssl_verify_depth 4; # Allow intermediate CAs
     ssl_client_certificate /etc/nginx/DoDRoots.crt;
 
     add_header Strict-Transport-Security max-age=15768000;
+
+    # Inform the proxyed app who the user who that SSL-terminated
     add_header X-Subject-DN $ssl_client_s_dn;
     add_header X-Client-Verified $ssl_client_verify;
 
