Cosmetic updates to readme/comments.

--- a/default.conf
+++ b/default.conf
@@ -18,7 +18,7 @@ server {
 
     add_header Strict-Transport-Security max-age=15768000;
 
-    # Inform the proxyed app who the user who that SSL-terminated
+    # Inform the proxyed app which user had connected to this TLS endpoint
     add_header X-Subject-DN $ssl_client_s_dn;
     add_header X-Client-Verified $ssl_client_verify;
 
